--- a/package.json
+++ b/package.json
@@ -15,26 +15,32 @@
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
     "@prisma/client": "^3.6.0",
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.8",
     "bcrypt": "^5.0.1",
     "cookie": "^0.4.1",
     "cookies": "^0.8.0",
     "easy-peasy": "^5.0.4",
+    "eslint": "8.27.0",
+    "eslint-config-next": "13.0.2",
     "format-duration": "^1.4.0",
     "framer-motion": "^4.1.17",
     "jsonwebtoken": "^8.5.1",
-    "next": "12.0.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "13.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-howler": "^5.2.0",
     "react-icons": "^4.3.1",
     "reset-css": "^5.0.1",
-    "swr": "^1.1.1"
+    "swr": "^1.1.1",
+    "typescript": "4.8.4"
   },
   "devDependencies": {
-    "@types/react": "^17.0.52",
+    "@types/react": "^17.0.37",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
-    "babel-plugin-superjson-next": "^0.4.2",
+    "babel-plugin-superjson-next": "^0.4.4",
     "eslint": "^8.4.1",
     "eslint-config-airbnb": "^19.0.2",
     "eslint-config-next": "12.0.7",
