--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.5",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie": "^0.5.1",
     "@types/jsonwebtoken": "^8.5.9",
